[package]
edition = "2021"
name = "ibooks-export"
version = "0.1.0"
[dependencies]
anyhow = "1.0"
thiserror = "1"
env_logger = "0.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
rusqlite = "0.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
term-table = "1.3.2"
term_size = "0.3.2"

[dependencies.clap]
features = ["derive"]
version = "3"
